--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="getYear(); windChill(); forecast()">
   <header>
     <div class="wrapperHeader">
-      <div id="logo" class="imgContainer"><a href="https://braulio0790.github.io/braulio0790/lesson11/index.html"><img src="img/logo.png" alt="logo gdl commerce chamber"></a></div>
+      <div id="logo" class="imgContainer"><a href="https://braulio0790.github.io/finalproject/"><img src="img/Logo.png" alt="logo gdl commerce chamber"></a></div>
       <div class="headericons">
         <img src="img/facebook.png">
         <img src="img/twitter.png">
@@ -28,11 +28,11 @@
       <div class="headerWidth">
        <button onclick="toggleMenu()">&#9776</button>
        <ul id="display" class="hide">
-        <Li><a href="https://braulio0790.github.io/braulio0790/lesson11/index.html">Home</a></Li>
-        <Li><a href="https://braulio0790.github.io/braulio0790/lesson11/preston.html">City</a></Li>
-        <Li><a href="https://braulio0790.github.io/braulio0790/lesson11/sodaspring.html">Join</a></Li>
-        <Li><a href="https://braulio0790.github.io/braulio0790/lesson11/fishhaven.html">Directory</a></Li>
-        <Li><a href="https://braulio0790.github.io/braulio0790/lesson11/stormcenter.html">Contact</a></Li>
+        <Li><a href="https://braulio0790.github.io/finalproject/index.html">Home</a></Li>
+        <Li><a href="https://braulio0790.github.io/finalproject/city.html">City</a></Li>
+        <Li><a href="https://braulio0790.github.io/finalproject/join.html">Join</a></Li>
+        <Li><a href="https://braulio0790.github.io/finalproject/directory.html">Directory</a></Li>
+        <Li><a href="https://braulio0790.github.io/finalproject/contact.html">Contact</a></Li>
        </ul>
       </div>
     </nav>
