--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body onload="getYear(); windChill(); forecast()">
   <header>
     <div class="wrapperHeader">
-      <div id="logo" class="imgContainer"><a href="https://braulio0790.github.io/finalproject/"><img src="img/Logo.png" alt="logo gdl commerce chamber"></a></div>
+      <div id="logo" class="imgContainer"><a href="https://braulio0790.github.io/finalproject/"><img src="img/Logo.PNG" alt="logo gdl commerce chamber"></a></div>
       <div class="headericons">
         <img src="img/facebook.png">
         <img src="img/twitter.png">
