--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
       <h3>
         The chamber of commerce of Guadalajara support the local business and attract tourism to increase the economy of the city. Your business will have a wide range of tools to help you.
       </h3>
-      <button>Join Us</button>
+      <button><a href="https://braulio0790.github.io/finalproject/join.html">Join Us</a></button>
     </div>
   </div>
   <button>Contact Us</button>
@@ -57,7 +57,7 @@
        <div id="b2"><a href="#"><img src="img/garibaldi.jpg"></a></div>
        <div id="b3"><a href="#"><img src="img/dolphy.jpeg"></a></div>
        </div>
-      <a class="linkbusiness3" href="#">See More</a>
+      <a class="linkbusiness3" href="https://braulio0790.github.io/finalproject/directory.html">See More</a>
   </section>
   
   <section class="descriptionsection">
