--- a/join.html
+++ b/join.html
@@ -40,15 +40,74 @@
   </header>
   
   <main>
-   <section class="section1"></section>
+   <section class="section1">
+     <h3>Join Us and Obtain Benefits</h3>
+     <p>
+      *Guadalajara chamber of commerce is an organization that help business to grow and promote tourism.<br><br>
+      *The chamber advertise the business that are part of the organization in the pyhsical and digital space.<br><br>
+      *Members of the organization have access to especial discounts in publicity.<br><br>
+      *Members of the organization have access to especial training and business coferences.<br><br>
+      *Members of the organization have especial legal support.<br><br>
+      *Members of the organization could be elegible for credits to improve their business.
+     </p>
+   </section>
 
-   <section class="section2"></section>
+   <section class="section2">
+    <form method="GET" action="thankyou_page.html">
+      <h3>Join Us Form</h3>
+      <h4>The information you provide will be used internally, any other use is prohibited.</h4><br><br>
+        <label for="fname">First Name:
+        <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}" required>
+        </label><br><br>
 
-   <section class="section3"></section>
+        <label for="fname">Last Name:
+          <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}" required>
+        </label><br><br>
 
-   <section class="section4"></section>
+        <label for="fname">Title:
+          <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}">
+        </label><br><br>
+  
+        <label>eMail:
+        <input type="email" name="email" placeholder="user@domain.com" required>
+        </label><br><br>
+  
+        <label>Phone:
+          <input type="tel" name="phone" placeholder="###-###-####">
+        </label><br><br>
 
-   <section class="section5"></section>
+        <label for="fname">Busines Name:
+          <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}" required>
+        </label><br><br>
+
+        <label for="fname">Busines Address:
+          <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}">
+        </label><br><br>
+
+
+        <label for="fname">Busines Website:
+          <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}" required>
+        </label><br><br>
+  
+        <label for="birthday">Business Description:
+          <input type="text" id="date" name="date">
+          </label><br><br><br>
+        
+        <label class="radio">Membership Level (Choose one)<br><br>
+            Non-profit ($100)
+            <input type="radio" name="time" value="$100">
+            Bronze ($200)
+            <input type="radio" id="time3" name="time" value="$200">
+            Silver ($400)
+            <input type="radio" id="time4" name="time" value="$400">
+            Gold ($1000)
+            <input type="radio" id="time4" name="time" value="$1000">
+        </label><br><br><br>
+        
+        <input class="button_submit" type="submit" value="Send"><br><br><br>
+        </form>
+
+   </section>
 
   </main> <!-- end of main -->
 
