--- a/join.html
+++ b/join.html
@@ -17,8 +17,8 @@
     <div class="wrapperHeader">
       <div id="logo" class="imgContainer"><a href="https://braulio0790.github.io/finalproject/"><img src="img/Logo.PNG" alt="logo gdl commerce chamber"></a></div>
       <div class="headericons">
-        <img src="img/facebook.png">
-        <img src="img/twitter.png">
+        <a href="https://es-la.facebook.com/camaradecomerciogdl.mx/"><img src="img/facebook.png"></a>
+        <a href="https://twitter.com/camaradecom_gdl?lang=en"><img src="img/twitter.png"></a>
       </div>
     </div>
 
