--- a/contact.html
+++ b/contact.html
@@ -40,15 +40,69 @@
   </header>
   
   <main>
-   <section class="section1"></section>
+   <section class="section1">
+    <h2>Contact Page</h2><br>
+    <div class="map">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3732.8518470692557!2d-103.41062328507323!3d20.67560558619076!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8428aebf6a03c0e3%3A0x88a97455ea31966a!2sChamber%20of%20Commerce%20of%20Guadalajara!5e0!3m2!1sen!2smx!4v1617470013777!5m2!1sen!2smx" width="100%" height="500px" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+    </div>
+      <p>
+       Address: Av. Ignacio L. Vallarta 4095, Don Bosco Vallarta, 45000 Zapopan, Jal.<br><br>
+       Phone: +52 (33) 38809090<br><br>
+       Email: http://www.camaradecomerciogdl.mx/<br><br>
+       Hours: Monday to Friday from 8am to 4pm.
+      </p>
+   </section>
 
-   <section class="section2"></section>
+   <section class="section2">
+     <h2>Our Chamber of Commerce Board Directors</h2>
+     <div class="presidents">
+      <img src="img/raul.png">
+       Dr. Hector Raúl Pérez
+     </div>
 
-   <section class="section3"></section>
+     <div class="presidents">
+      <img src="img/enrique.png">
+       Mtro. Enrique de la Madrid
+     </div>
 
-   <section class="section4"></section>
+     <div class="presidents">
+      <img src="img/juan.png">
+       Juan Pablo Medina Mora
+     </div>
 
-   <section class="section5"></section>
+     <div class="presidents">
+      <img src="img/ricardo.png">
+       Ricardo Parra
+     </div>
+
+
+   </section>
+
+   <section class="section3">
+    <form method="GET" action="thankyou_page.html">
+      <h3>Join Us Form</h3>
+      <h4>The information you provide will be used internally, any other use is prohibited.</h4><br><br>
+        <label for="fname">Full Name:
+        <input type="text" id="fname" name="fname" placeholder="At least 5 characters"  pattern="[a-zA-Z0-9\s]+{5,30}" required>
+        </label><br><br>
+
+        <label>Phone:
+          <input type="tel" name="phone" placeholder="###-###-####">
+        </label><br><br>
+
+        <label>eMail:
+        <input type="email" name="email" placeholder="user@domain.com" required>
+        </label><br><br>
+  
+        <label for="birthday">Comments:
+          <input type="text" id="date" name="date">
+          </label><br><br><br>
+
+        <input class="button_submit" type="submit" value="Send"><br><br><br>
+        </form>
+
+   </section>
+
 
   </main> <!-- end of main -->
 
